2006-02-25  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp (default-fasl-directory): Previously we return
	only the directory-namestring which breaks SCL, because it loses
	the host and device components.  Return the complete pathname
	instead.  Patch by Douglas Crosher.

	* slime.el (slime-lisp-host): New variable. Replace all references
	to "127.0.0.1" with the variable.

2006-02-25  Douglas Crosher <dcrosher@common-lisp.net>

	* swank-backend.lisp (operate-on-system): symbol case fix for
	SCL's lowercase mode.

	* swak.lisp (setup-stream-indirection)
	(globally-redirect-io-to-connection)
	(revert-global-io-redirection): symbol case fixes.
	
	* swank-scl.lisp: (inspect-for-emacs):  Fixes for the inspect
	standard-objects, and inspect array.  Plus misc symbol case fixes.

2006-02-22  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-repl-send-input): Don't include the final
	newline in the slime-repl-input-face overlay, thus avoid showing the
	"Evaluation aborted" message in boldface.  Don't set non-existent
	"rear-nonsticky" overlay property; overlay stickiness is
	controlled by make-overlay arguments. 

2006-02-20  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Use argument list information to complete keywords contextually. 
	Example:  (find 1 '(1 2 3) :s <M-TAB> --completes--> :start 
	rather than suggesting all ever-interned keywords starting with ":s".
	
	* slime.el (slime-complete-keywords-contextually): New
	customizable variable.
	(slime-enclosing-operator-names): New optional argument
	max-levels. 
	(slime-completions-for-keyword): New.
	(slime-contextual-completions): New.
	(slime-expand-abbreviations-and-complete): Use it instead of
	slime-completions. 

	* swank.lisp (operator-designator-to-form): New, factored out from
	arglist-for-echo-area.
	(arglist-for-echo-area): Use it here.
	(completions-for-keyword): New.
	(find-matching-symbols-in-list): New.
